Fixed toast layout issue

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -629,12 +629,12 @@ video {
   height: 4rem;
 }
 
-.h-4{
-  height: 1rem;
+.h-20{
+  height: 5rem;
 }
 
-.h-48{
-  height: 12rem;
+.h-4{
+  height: 1rem;
 }
 
 .h-5{
@@ -643,18 +643,6 @@ video {
 
 .h-8{
   height: 2rem;
-}
-
-.h-32{
-  height: 8rem;
-}
-
-.h-24{
-  height: 6rem;
-}
-
-.h-20{
-  height: 5rem;
 }
 
 .min-h-\[180px\]{
@@ -681,6 +669,10 @@ video {
   width: 4rem;
 }
 
+.w-20{
+  width: 5rem;
+}
+
 .w-32{
   width: 8rem;
 }
@@ -689,16 +681,16 @@ video {
   width: 1rem;
 }
 
-.w-48{
-  width: 12rem;
-}
-
 .w-5{
   width: 1.25rem;
 }
 
 .w-8{
   width: 2rem;
+}
+
+.w-\[min\(350px\2c 100\%\)\]{
+  width: min(350px,100%);
 }
 
 .w-\[min\(450px\2c 100\%\)\]{
@@ -711,26 +703,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-24{
-  width: 6rem;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-\[\]{
-  width: ;
-}
-
-.w-\[min\(300px\2c 100\%\)\]{
-  width: min(300px,100%);
-}
-
-.w-\[min\(350px\2c 100\%\)\]{
-  width: min(350px,100%);
 }
 
 .shrink-0{
@@ -860,6 +832,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -878,16 +855,6 @@ video {
 .py-\[4px\]{
   padding-top: 4px;
   padding-bottom: 4px;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .text-center{
@@ -911,6 +878,11 @@ video {
   line-height: 1.5rem;
 }
 
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -924,11 +896,6 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .font-bold{
@@ -962,24 +929,14 @@ video {
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-slate-600{
-  --tw-text-opacity: 1;
-  color: rgb(71 85 105 / var(--tw-text-opacity));
-}
-
-.text-slate-400{
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .transition-all{
@@ -1010,6 +967,7 @@ button{
   position: fixed;
   top: 1rem;
   left: 50%;
+  z-index: 10;
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 0.375rem;
@@ -1025,7 +983,7 @@ button{
 .toast.success,
 .toast.error{
   visibility: visible;
-  top: 2rem;
+  top: 2.5rem;
   opacity: 1;
 }
 
